@@ -1,3 +1,8 @@
+2013-11-12  Tom Schutter  <t.schutter@comcast.net>
+
+	* faq-setup.xml (faq.setup.uninstall-service): Describe how to unhook
+	cyglsa DLL from OS before uninstalling.
+
 2013-11-11  Corinna Vinschen  <corinna@vinschen.de>
 
 	* faq-setup.xml: Throughout remove setup.exe, use setup or setup-x86...
